[package]
name = "Whitesnake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_core={git="https://github.com/BIGNARF/core.git"}
jammdb = "0.10.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = {version="1.0.188", features=["derive"]}
sqlite = "0.31.1"
